Simplified Chinese translation
translate all the commands
add Chinese language link in the html file

--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -63,6 +63,7 @@
     <h4>
       <a class="lang" data-lang="en">en</a>
       <a class="lang" data-lang="fr" data-docs="French translation by Bernard Opic">fr</a>
+      <a class="lang" data-lang="zh-cn" data-docs="Simplified Chinese translation by Ace Code">简</a>
     </h4>
   </div>
 
