simplify amp-what reference

--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -68,7 +68,7 @@
       French translation by <a href="http://blogs.media-tips.com/bernard.opic/">Bernard Opic</a>
     </h6>
     <h3>
-      <a href="http://www.amp-what.com?utm_source=Git+Cheatsheet&amp;utm_campaign=Text+Link+Discover%20Your%20Character%20(entity)%26nbsp%3B%26mdash%3B%26nbsp%3BVisit%20%26amp%3Bwhat%26raquo%3B&amp;utm_medium=web"
+      <a href="http://www.amp-what.com?utm_source=Git+Cheatsheet&amp;utm_campaign=Text+Link&amp;utm_medium=web"
          onclick="  _gaq.push(['_trackEvent', 'git-cheatsheet', 'refer', 'amp-what', null])">Visit &amp;what»</a></h3>
   </div>
 </div>
