Add link to git-pretty, by justin hileman Update copyright notice. Move stuff around so that it fits.

--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -54,22 +54,26 @@
 <div id="hd" class="container_16">
   <div class="grid_8 alpha">
     <h1 data-docs="Categorize Git's commands based on what they affect.">Git Cheatsheet</h1>
+    <h2 data-docs="another visualization from Andrew Peterson, NDP Software."><a href="http://ndpsoftware.com">an
+      interaction
+      from NDP Software</a></h2>
+    <h6>(c) <a href="https://plus.google.com/b/112580895511032559572/112580895511032559572/about?rel=author">Andrew Peterson</a> 2009-2014 All Rights Reserved.
+      French translation by <a href="http://blogs.media-tips.com/bernard.opic/">Bernard Opic</a>
+    </h6>
     <h4>
       <a class="lang" data-lang="en">en</a>
       <a class="lang" data-lang="fr" data-docs="French translation by Bernard Opic">fr</a>
     </h4>
   </div>
 
-  <div class="grid_8 omega">
-    <h2 data-docs="another visualization from Andrew Peterson, NDP Software."><a href="http://ndpsoftware.com">an
-      interaction
-      from NDP Software</a></h2>
-    <h6>(c) <a href="https://plus.google.com/b/112580895511032559572/112580895511032559572/about?rel=author">Andrew Peterson</a> 2009-2013 All Rights Reserved.
-      French translation by <a href="http://blogs.media-tips.com/bernard.opic/">Bernard Opic</a>
-    </h6>
-    <h3>
-      <a href="http://www.amp-what.com?utm_source=Git+Cheatsheet&amp;utm_campaign=Text+Link&amp;utm_medium=web"
-         onclick="  _gaq.push(['_trackEvent', 'git-cheatsheet', 'refer', 'amp-what', null])">Visit &amp;what»</a></h3>
+  <div class="grid_8 omega" style="float: right;padding-right: 15px;">
+    <ul>
+      <li>related</li>
+      <li><a href="http://justinhileman.info/article/git-pretty/git-pretty.png"
+             onclick="_gaq.push(['_trackEvent', 'git-cheatsheet', 'refer', 'git-pretty', null])">escape a git mess, step-by-step&raquo;</a></li>
+      <li><a href="http://www.amp-what.com?utm_source=Git+Cheatsheet&amp;utm_campaign=Text+Link&amp;utm_medium=web"
+         onclick="  _gaq.push(['_trackEvent', 'git-cheatsheet', 'refer', 'amp-what', null])">discover character entities at &amp;what&raquo;</a></li>
+    </ul>
   </div>
 </div>
 <div class="clear"></div>
