add _blank targets for external links

--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -70,9 +70,13 @@
     <ul>
       <li>related</li>
       <li><a href="http://justinhileman.info/article/git-pretty/git-pretty.png"
-             onclick="_gaq.push(['_trackEvent', 'git-cheatsheet', 'refer', 'git-pretty', null])">escape a git mess, step-by-step&raquo;</a></li>
+             target="_blank"
+             onclick="_gaq.push(['_trackEvent', 'git-cheatsheet', 'refer', 'git-pretty', null])">escape a git mess,
+        step-by-step&raquo;</a></li>
       <li><a href="http://www.amp-what.com?utm_source=Git+Cheatsheet&amp;utm_campaign=Text+Link&amp;utm_medium=web"
-         onclick="  _gaq.push(['_trackEvent', 'git-cheatsheet', 'refer', 'amp-what', null])">discover character entities at &amp;what&raquo;</a></li>
+             target="_blank"
+             onclick="  _gaq.push(['_trackEvent', 'git-cheatsheet', 'refer', 'amp-what', null])">discover character
+        entities at &amp;what&raquo;</a></li>
     </ul>
   </div>
 </div>
