add wide skyscraper on right; left align, instead of center

--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -83,6 +83,17 @@
 </div>
 <div class="clear"></div>
 <div id="diagram" class="container_16">
+  <div style="position: absolute; left: 1200px; width: 300px; height: 600px; padding: 0;">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- Git Cheatsheet – Wide Skyscraper -->
+    <ins class="adsbygoogle"
+         style="display:inline-block;width:160px;height:600px"
+         data-ad-client="ca-pub-6893651588300115"
+         data-ad-slot="6274733676"></ins>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+  </div>
   <section id="stash" class="loc grid_2 alpha"><h5>stash</h5></section>
   <section id="workspace" class="loc grid_4"><h5>workspace</h5></section>
   <section id="index" class="loc grid_3"><h5>index</h5></section>
