--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -134,7 +134,7 @@
       files are preserved but not marked for commit) and reports what has not been updated.
     </dd>
     <dt>reset --soft HEAD^</dt>
-    <dd>Undo the last commit, leaving changes in the the index.</dd>
+    <dd>Undo the last commit, leaving changes in the index.</dd>
     <dt>reset --hard</dt>
     <dd>Matches the workspace and index to the local tree. WARNING: Any changes to tracked files in the working tree
       since commit are lost. Use this if merging has resulted in conflicts and you'd like to start over. Pass ORIG_HEAD
