--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -17,12 +17,15 @@
   <!-- End of Google Analytics Content Experiment code -->
 
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-  <title>Git Cheatsheet • NDP Software</title>
+  <title>NDP Software :: Git Cheatsheet</title>
+  <link rel="SHORTCUT ICON" href="/favicon.ico"/>
   <meta name="description"
         content="Interactive Git Cheatsheet, categorizing commands based on what they affect.">
   <meta name="keywords"
         content="Git Cheatsheet Cheat sheet Kuleta chuleta chivo machete torpedo acordeón cribsheet crib sheet antisèche Planquadratangabe Nachschlagewerk"/>
-  <link rel="author" href="https://plus.google.com/111325326458556506982/posts?rel=author">
+  <link rel="author" href="https://plus.google.com/+Ndpsoftware?rel=author">
+  <meta property=”og:type” content=”website”/>
+  <meta property=”og:title” content=”NDP Software :: Git Cheatsheet”/>
   <link rel="stylesheet" href="git-cheatsheet/1200.css" type="text/css"/>
   <link rel="stylesheet" href="git-cheatsheet/fonts/Impact-Label-fontfacekit/stylesheet.css" type="text/css"/>
   <script src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.js' type='text/javascript'></script>
@@ -48,6 +51,23 @@
     })();
 
   </script>
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Organization",
+      "name" : "NDP Software",
+      "url": "http://ndpsoftware.com",
+      "sameAs" : [
+        "http://www.linkedin.com/in/ndpsoftware",
+        "http://github.com/ndp",
+        "http://www.twitter.com/ndp8",
+        "https://www.facebook.com/ndpsoft",
+        "https://plus.google.com/+Ndpsoftware"
+      ],
+
+      "logo": "http://ndpsoftware.com/images/brand/logo-square.png"
+    }
+    </script>
 </head>
 
 <body>
