--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -35,6 +35,7 @@
   <link href='https://fonts.googleapis.com/css?family=Merriweather:300,400' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="git-cheatsheet/fonts/Impact-Label-fontfacekit/stylesheet.css" type="text/css"/>
   <script src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.js' type='text/javascript'></script>
+  <script src='git-cheatsheet/js/rx.lite.js'></script>
   <script src='git-cheatsheet/csster.js?v=2'></script>
   <script src='git-cheatsheet/styles.js?v=2'></script>
   <script src='git-cheatsheet/cookies.js'></script>
