--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -34,7 +34,8 @@
   <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,200,500' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Merriweather:300,400' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="git-cheatsheet/fonts/Impact-Label-fontfacekit/stylesheet.css" type="text/css"/>
-  <script src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.js' type='text/javascript'></script>
+  <script src='http://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.js' type='text/javascript'></script>
+  <!--<script src='git-cheatsheet/js/jquery-2.2.0.js'></script>-->
   <script src='git-cheatsheet/js/rx.lite.js'></script>
   <script src='git-cheatsheet/csster.js?v=2'></script>
   <script src='git-cheatsheet/styles.js?v=2'></script>
