make link to previous version

--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -78,7 +78,6 @@
       interaction
       from NDP Software</a></h2>
     <h6>(c) <a href="https://plus.google.com/b/112580895511032559572/112580895511032559572/about?rel=author">Andrew Peterson</a> 2009-2016 All Rights Reserved.
-      French translation by <a href="http://blogs.media-tips.com/bernard.opic/">Bernard Opic</a>
     </h6>
     <h4>
       <a class="lang" data-lang="en">en</a>
@@ -90,14 +89,16 @@
 
   <div class="grid_8 omega" style="float: right;padding-right: 15px;">
     <ul>
-      <li>related</li>
+      <li><a href='./git-cheatsheet-previous/index.html'
+             onclick="_gaq.push(['_trackEvent', 'git-cheatsheet', 'refer', 'previous-version', null])"
+        >previous version&raquo;</a></li>
       <li><a href="http://justinhileman.info/article/git-pretty/git-pretty.png"
              target="_blank"
              onclick="_gaq.push(['_trackEvent', 'git-cheatsheet', 'refer', 'git-pretty', null])">escape a git mess,
         step-by-step&raquo;</a></li>
       <li><a href="http://www.amp-what.com?utm_source=Git+Cheatsheet&amp;utm_campaign=Text+Link&amp;utm_medium=web"
              target="_blank"
-             onclick="  _gaq.push(['_trackEvent', 'git-cheatsheet', 'refer', 'amp-what', null])">discover character
+             onclick="_gaq.push(['_trackEvent', 'git-cheatsheet', 'refer', 'amp-what', null])">discover character
         entities at &amp;what&raquo;</a></li>
     </ul>
   </div>
