--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -31,6 +31,8 @@
     ;NREUM.info={beacon:"bam.nr-data.net",errorBeacon:"bam.nr-data.net",licenseKey:"353079bf4b",applicationID:"15004877",sa:1,agent:"js-agent.newrelic.com/nr-852.min.js"}
   </script>
   <link rel="stylesheet" href="git-cheatsheet/1200.css" type="text/css"/>
+  <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,200,700,500,600,900' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Merriweather:100,200,300,400' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="git-cheatsheet/fonts/Impact-Label-fontfacekit/stylesheet.css" type="text/css"/>
   <script src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.js' type='text/javascript'></script>
   <script src='git-cheatsheet/csster.js?v=2'></script>
