--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -92,6 +92,7 @@
       <a class="lang" data-lang="fr" data-docs="French translation by Bernard Opic">fr</a>
       <a class="lang" data-lang="zh-cn" data-docs="Simplified Chinese translation by Ace Code">简</a>
       <a class="lang" data-lang="es" data-docs="Spanish translation by sminutoli">es</a>
+      <a class="lang" data-lang="de" data-docs="German translation by Kai Winter">de</a>
     </h4>
   </div>
 
