--- a/git-cheatsheet.html
+++ b/git-cheatsheet.html
@@ -15,7 +15,7 @@
   <meta property=”og:title” content=”NDP Software :: Git Cheatsheet”/>
   <script>
     var _rollbarConfig = {
-      accessToken: "c176f55eef3c41668c078e83aedcd27e",
+      accessToken: "9b6fc0fe38b34e4687b1b2b9b4f1924e",
       captureUncaught: true,
       captureUnhandledRejections: true,
       payload: {
@@ -49,7 +49,6 @@
       "sameAs" : [
         "https://www.linkedin.com/in/ndpsoftware",
         "https://github.com/ndp",
-        "https://www.twitter.com/ndp8",
         "https://www.facebook.com/ndpsoft"
       ],
       "logo": "https://ndpsoftware.com/images/brand/logo-square.png"
@@ -61,7 +60,7 @@
 <div id="hd" class="container_16">
   <div class="grid_10 alpha">
     <h1 data-docs="Categorize Git's commands based on what they affect.">Git Cheatsheet</h1>
-    <h2 data-docs="another visualization from Andrew Peterson, NDP Software."><a href="https://ndpsoftware.com">an
+    <h2 data-docs="a visualization from Andrew Peterson, NDP Software."><a href="https://ndpsoftware.com">an
       interaction
       from NDP Software</a></h2>
     <h6>(c) <a href="https://ndpsoftware.com">Andrew Peterson</a> 2009-2022 All Rights Reserved.
